data/derived/comb/progs/unify/prog4579.ml.out
Characters 138-146:
  let seen' = if List.mem h seen= false then [h]@seen in
                                             ^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type unit
